--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "next": "^9.0.5",
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-typed": "^1.2.0",
+    "reactstrap": "^8.0.1"
   }
 }
