--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "server": "NODE_ENV=production node server/index.js",
     "deploy": "aws s3 cp --recursive ./build s3://levyportfolio.com",
-    "start": "next start"
+    "start": "next start",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
